# drakben

./: .dockerignore  .env.example  .gitattributes  .gitignore  ANALIZ_RAPORU.md  API.md  ARCHITECTURE.md  CHANGELOG.md  COMPARATIVE_AUDIT.md  CONTRIBUTING.md  DOCKER.md  DOCKER_SANDBOX_PLAN.md  DRAKBEN_LOG.md  Dockerfile  GITHUB_DEPLOY.md  GITHUB_READY.md  INSTALLATION.md  LICENSE  MONITORING.md  MULTI_LANGUAGE_SUPPORT.md  QUICKSTART.md  README.md  ROADMAP_V3.md  SECURITY.md  V2_RELEASE_NOTES.md  V2_ROADMAP.md  V2_ROADMAP_STATUS.md  agent_state.json  brain_cache.json  coverage.xml  docker-compose.yml  drakben.py  errors.txt  mypy.ini  proof_complexity.txt  proof_integrity.txt  proof_security.txt  proof_typing.txt  proof_typing_v10.txt  proof_typing_v11.txt  (+29 more)
.github/: copilot-instructions.md
config/: .gitkeep  plugins.json  settings.json
core/: __init__.py  ad_bloodhound.py  advanced_chain_builder.py  advanced_modules.py  agent.py  agent_extensions.py  ai_autonomous_agent.py  approval.py  approval_flow.py  autonomous_solver.py  brain.py  brain_complete.py  brute_force_automation.py  c2_beacon.py  chain_planner.py  classifier.py  cli.py  cloud_scanner.py  code_review.py  coder.py  command_suggester.py  computer.py  config.py  container.py  daemon_service.py  database.py  database_manager.py  distributed_state.py  events.py  evolution_memory.py  exceptions.py  execution_engine.py  executor.py  exploit_recommender.py  exploit_verifier.py  ghost_protocol.py  health.py  i18n.py  (+58 more)
modules/native/rust_syscalls/: Cargo.toml  build.py
modules/native/rust_syscalls/src/: lib.rs
(+567 files in other folders)
