[package]
name = "drakben_syscalls"
version = "0.1.0"
edition = "2021"
authors = ["Drakben Team"]
description = "High-performance Syscall Engine for Drakben C2 (Windows Target)"

[lib]
crate-type = ["cdylib"]

[dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader", # NTDLL/Kernel32 modüllerini bulmak için
    "Win32_System_SystemInformation",
] }
